--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ before_script:
 
 script:
   - android list target
-  - ./gradlew connectedAndroidTest -PdisablePreDex
+  - ./gradlew connectedCheck -PdisablePreDex
