--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.vinay.deviceid"
+        applicationId "com.roadmapper.deviceid"
         minSdkVersion 10
         targetSdkVersion 10
         versionCode 1
